# memora

./: .gitignore  CLAUDE.md  README.md  TODO.md  make_slideshow.py  memoramotion.py  pyproject.toml  requirements-core.txt  requirements.txt  videophotoslide.py
tests/: test_make_slideshow2.py  test_memoramotion.py  test_videophotoslide.py
