[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memora-motion"
version = "0.1.0"
description = "Memora Motion turns photo folders into polished slideshow videos."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Memora" }
]
dependencies = [
    "Pillow>=10",
    "pillow-heif>=0.18",
    "mediapipe>=0.10",
    "numpy>=1.20",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
# Runtime feature extras are no-op compatibility aliases. The default install
# includes every supported runtime feature.
smart-focus = []
youtube = []
all = []
dev = [
    "pytest>=8",
]

[project.scripts]
memoramotion = "memoramotion:main"

[tool.setuptools]
py-modules = ["memoramotion"]
